<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LampeMagique">

    <Button
        android:id="@+id/rouge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/red"
        android:text="@string/rouge"
        app:layout_constraintBottom_toTopOf="@+id/vert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/blanc" />

    <Button
        android:id="@+id/vert"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/vert"
        android:text="@string/vert"
        app:layout_constraintBottom_toTopOf="@+id/bleu"
        app:layout_constraintTop_toBottomOf="@+id/rouge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/bleu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/bleu"
        android:text="@string/bleu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vert" />

    <TextView
        android:id="@+id/nomappli"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/auteur"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/auteur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nom"
        app:layout_constraintBottom_toTopOf="@+id/blanc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nomappli" />

    <FrameLayout
        android:id="@+id/blanc"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/rouge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/auteur"
        app:layout_constraintVertical_weight="1">
    </FrameLayout>

    <TextView
        android:id="@+id/couleur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/colorinitial"
        app:layout_constraintBottom_toTopOf="@+id/rouge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/rouge" />

</androidx.constraintlayout.widget.ConstraintLayout>